@@ -5,6 +5,7 @@
     2008-06-01 - 2008-06-..
     * Fixed 64K buffer limit on WIDCOMM Stack
     * Fixed ERROR_IO_INCOMPLETE on BlueSoleil Stack
+    * Fixed services search on WIDCOMM to use 'and' for all UUID in query
 
     2008-05-01 - 2008-05-25
     * BlueCoveImpl.shutdown() API function
